# kuma-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  Serasa Experian developer API's.docx  Underwriting_Framework_Blueprint.md  programa zunne link  pyproject.toml
api/: main.py
leads/: __init__.py  extract.py  models.py
portfolio/: __init__.py  builder.py  models.py
scoring_engine/: __init__.py  extractor.py  models.py  scorecard.py  synthetic.py
tests/: conftest.py  test_api.py  test_extractor.py  test_leads.py  test_portfolio.py  test_regression.py  test_scorecard.py  test_smoke.py  test_synthetic.py  test_whatsapp.py
whatsapp/: __init__.py  client.py  config.py  conversation.py  models.py  outreach.py  signature.py  store.py  webhook.py
whatsapp/flows/: intake_pt_BR.json
