[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumora-scoring-engine"
version = "0.1.0"
description = "Rules-based trust scoring engine for Lumora (Phase 0)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "faker>=24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["scoring_engine"]
