[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumora"
version = "0.2.0"
description = "Credit-access platform for informal Brazilian entrepreneurs: WhatsApp intake, portfolio builder, scoring integration"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["api", "whatsapp", "leads", "portfolio"]
